fix(image-modal): overflow-y hidden

--- a/src/components/Modals/Image/imageModal.module.scss
+++ b/src/components/Modals/Image/imageModal.module.scss
@@ -5,6 +5,7 @@
   @include m.flex;
   width: 100%;
   height: 100%;
+  overflow-y: hidden !important;
 }
 
 .overlay {
